--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "lerna run start",
-    "test": "lerna run test --scope=items-web"
+    "test": "lerna run test --scope=forms-web"
   },
   "workspaces": [
     "packages/*"
