--- a/packages/forms-api/package.json
+++ b/packages/forms-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "items-api",
+  "name": "forms-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
-    "ts-node": "^9.0.0",
-    "ts-node-dev": "^1.0.0"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0"
   }
 }
