--- a/packages/forms-api/package.json
+++ b/packages/forms-api/package.json
@@ -13,16 +13,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tsed/common": "^6.94.0",
-    "@tsed/platform-express": "^6.94.0",
+    "@tsed/ajv": "6.94.0",
+    "@tsed/common": "6.94.0",
+    "@tsed/mongoose": "6.94.0",
+    "@tsed/platform-express": "6.94.0",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "https": "^1.0.0",
     "method-override": "^3.0.0",
+    "mongoose": "^6.9.1",
     "typescript": "^4.5.2"
   },
   "devDependencies": {
