--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "1.0.0",
   "devDependencies": {
-    "@types/enzyme": "^3.10.10",
-    "lerna": "^4.0.0"
+    "@types/enzyme": "3.10.13",
+    "lerna": "4.0.0"
   },
   "scripts": {
     "start": "lerna run start",
