--- a/packages/forms-web/package.json
+++ b/packages/forms-web/package.json
@@ -3,23 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/react-redux": "^7.1.20",
-    "axios": "^0.24.0",
-    "enzyme": "^3.11.0",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "redux-thunk": "^2.4.1",
-    "typescript": "^4.5.2",
-    "web-vitals": "^1.0.1"
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "11.2.7",
+    "@testing-library/user-event": "12.8.3",
+    "@types/react-redux": "7.1.25",
+    "axios": "0.24.0",
+    "enzyme": "3.11.0",
+    "node-sass": "7.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "7.2.9",
+    "react-router-dom": "5.3.4",
+    "redux-thunk": "2.4.2",
+    "typescript": "4.9.5",
+    "web-vitals": "1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,10 +43,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/redux-mock-store": "^1.0.3",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
-    "redux-mock-store": "^1.5.4"
+    "@types/react-dom": "17.0.20",
+    "@types/react-router-dom": "5.3.3",
+    "@types/redux-mock-store": "1.0.3",
+    "react-scripts": "5.0.1",
+    "redux-mock-store": "1.5.4"
   }
 }
