--- a/packages/forms-web/package.json
+++ b/packages/forms-web/package.json
@@ -11,6 +11,7 @@
     "enzyme": "3.11.0",
     "node-sass": "7.0.3",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-redux": "7.2.9",
