--- a/packages/forms-web/package.json
+++ b/packages/forms-web/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "5.3.4",
     "redux-thunk": "2.4.2",
     "typescript": "4.9.5",
+    "uuid": "^9.0.0",
     "web-vitals": "1.1.2"
   },
   "scripts": {
@@ -48,6 +49,7 @@
     "@types/react-dom": "17.0.20",
     "@types/react-router-dom": "5.3.3",
     "@types/redux-mock-store": "1.0.3",
+    "@types/uuid": "^9.0.2",
     "react-scripts": "5.0.1",
     "redux-mock-store": "1.5.4"
   }
