--- a/packages/forms-web/package.json
+++ b/packages/forms-web/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "12.8.3",
     "@types/react-redux": "7.1.25",
     "axios": "0.24.0",
+    "classnames": "^2.3.2",
     "enzyme": "3.11.0",
     "node-sass": "7.0.3",
     "react": "18.2.0",
