--- a/packages/forms-web/package.json
+++ b/packages/forms-web/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.2.0",
     "react-redux": "7.2.9",
     "react-router-dom": "5.3.4",
+    "react-toastify": "^9.1.3",
     "redux-thunk": "2.4.2",
     "typescript": "4.9.5",
     "uuid": "^9.0.0",
