--- a/packages/forms-web/package.json
+++ b/packages/forms-web/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.11.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "11.2.7",
     "@testing-library/user-event": "12.8.3",
     "@types/react-redux": "7.1.25",
     "axios": "0.24.0",
     "classnames": "^2.3.2",
+    "dotenv": "^16.3.1",
     "enzyme": "3.11.0",
     "node-sass": "7.0.3",
     "react": "18.2.0",
