--- a/packages/forms-api/package.json
+++ b/packages/forms-api/package.json
@@ -25,7 +25,9 @@
     "cors": "2.8.5",
     "dotenv": "16.0.3",
     "express": "4.18.2",
+    "google-auth-library": "^9.0.0",
     "https": "1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "3.0.0",
     "mongoose": "6.9.1",
     "typescript": "4.9.5"
