--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -41,6 +41,12 @@ jobs:
       - name: Update kube config
         run: aws eks update-kubeconfig --name dynamic-forms-eks1
 
+      - name: Create ConfigMap from Secrets
+        run: |
+          kubectl create configmap my-config \
+            --from-literal=GOOGLE_CLIENT_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
+            --from-literal=OTHER_KEY="${{ secrets.AWS_ACCESS_KEY_ID }}"         
+
       - name: Deploy to EKS
         run: |
           kubectl apply -f deployment.yaml
@@ -48,10 +54,5 @@ jobs:
 
       - name: Apply env vars
         run: |
-          kubectl set env deployment/dynamic-forms GOOGLE_CLIENT_ID=ivan
-
-      - name: Create ConfigMap from Secrets
-        run: |
-          kubectl create configmap my-config \
-            --from-literal=GOOGLE_CLIENT_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
-            --from-literal=OTHER_KEY="${{ secrets.AWS_ACCESS_KEY_ID }}"    
+          kubectl set env deployment/dynamic-forms OTHER_KEY_FOR_OTHER_THING=ivan
+   
