--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Create ConfigMap from Secrets
         run: |
-          kubectl create configmap my-config \
+          kubectl create configmap app-forms-dynamic-configs \
             --from-literal=GOOGLE_CLIENT_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
             --from-literal=OTHER_KEY="${{ secrets.AWS_ACCESS_KEY_ID }}"         
 
