--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -43,6 +43,7 @@ jobs:
 
       - name: Create ConfigMap from Secrets
         run: |
+          kubectl delete configmap app-forms-dynamic-configs
           kubectl create configmap app-forms-dynamic-configs \
             --from-literal=GOOGLE_CLIENT_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
             --from-literal=OTHER_KEY="${{ secrets.AWS_ACCESS_KEY_ID }}"         
