--- a/hpa.yaml
+++ b/hpa.yaml
@@ -13,4 +13,4 @@ spec:
     - type: Resource
       resource:
         name: cpu
-        targetAverageUtilization: 50  # Target CPU utilization percentage
+        targetAverageUtilization: 50
