--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           kubectl set env deployment/dynamic-forms GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" ANOTHER_KEY=other_value
 
-      - name: Apply HPA
-        run: |
-          kubectl apply -f hpa.yaml          
+     # - name: Apply HPA
+      #  run: |
+       #   kubectl apply -f hpa.yaml
    
