--- a/hpa.yaml
+++ b/hpa.yaml
@@ -1,4 +1,5 @@
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
+# https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale-walkthrough/
 kind: HorizontalPodAutoscaler
 metadata:
   name: dynamic-forms-hpa
@@ -13,4 +14,6 @@ spec:
     - type: Resource
       resource:
         name: cpu
-        targetAverageUtilization: 50
+        target:
+          type: Utilization
+          averageUtilization: 50
