--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -49,3 +49,6 @@ jobs:
       - name: Apply env vars
         run: |
           kubectl set env deployment/dynamic-forms GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}"
+
+      - name: Apply HPA
+        run: kubectl apply -f hpa.yaml
