--- a/.github/workflows/github-actions-ci-web.yml
+++ b/.github/workflows/github-actions-ci-web.yml
@@ -1,4 +1,4 @@
-name: Node js app deploy to EKS
+name: Deploy dynamic-forms-web to S3 - Cloudfront
 on:
   push:
     branches: [ "main" ]
@@ -25,35 +25,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Build, tag, and push docker image to Amazon ECR
-        env:
-          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          REPOSITORY: dynamic-forms-rep
-          IMAGE_TAG: 1.1
-        run: |
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-          docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
-
-      - name: Update kube config
-        run: aws eks update-kubeconfig --name dynamic-forms-eks1
-
-      - name: Deploy to EKS
-        run: |
-          kubectl apply -f deployment.yaml
-          kubectl apply -f service.yaml
-
-      - name: Apply env vars
-        run: |
-          kubectl set env deployment/dynamic-forms GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" MONGOOSE_URL="${{ secrets.MONGOOSE_URL }}" SECRET_KEY="${{ secrets.SECRET_KEY }}"
-
-      - name: Apply HPA
-        run: kubectl apply -f hpa.yaml
-
-# Configure deploy front-end
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
