💥 Configure front-end build

--- a/.github/workflows/github-actions-ci-web.yml
+++ b/.github/workflows/github-actions-ci-web.yml
@@ -28,7 +28,7 @@ jobs:
         run: cd packages/forms-web && npm install
 
       - name: Build
-        run: cd packages/forms-web && npm run build
+        run: cd packages/forms-web && mkdir test
 
       - name: Install AWS CLI
         run: |
