--- a/packages/forms-web/package.json
+++ b/packages/forms-web/package.json
@@ -4,26 +4,27 @@
   "private": true,
   "dependencies": {
     "@react-oauth/google": "^0.11.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "11.2.7",
-    "@testing-library/user-event": "12.8.3",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/react-redux": "7.1.25",
     "axios": "0.24.0",
     "classnames": "^2.3.2",
     "dotenv": "^16.3.1",
     "enzyme": "3.11.0",
     "node-sass": "7.0.3",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "7.2.9",
     "react-router-dom": "5.3.4",
     "react-toastify": "^9.1.3",
     "redux-thunk": "2.4.2",
     "typescript": "4.9.5",
     "uuid": "^9.0.0",
-    "web-vitals": "1.1.2"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,7 +55,6 @@
     "@types/react-router-dom": "5.3.3",
     "@types/redux-mock-store": "1.0.3",
     "@types/uuid": "^9.0.2",
-    "react-scripts": "5.0.1",
     "redux-mock-store": "1.5.4"
   }
 }
