💥 update github action config

--- a/.github/workflows/github-actions-ci-api.yml
+++ b/.github/workflows/github-actions-ci-api.yml
@@ -1,9 +1,9 @@
 name: deploy dynamic-forms-api to EKS
 on:
   push:
-    branches: [ "mainx" ] # disabled
+    branches: [ "main" ] # disabled
   pull_request:
-    branches: [ "mainx" ] # disabled
+    branches: [ "main" ] # disabled
 
 jobs:
   deploy:
