--- a/packages/forms-api/package.json
+++ b/packages/forms-api/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "dotenv": "16.0.3",
+    "exceljs": "^4.4.0",
     "express": "4.18.2",
     "google-auth-library": "^9.0.0",
     "https": "1.0.0",
