--- a/.github/workflows/github-actions-ci-web.yml
+++ b/.github/workflows/github-actions-ci-web.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Build
         env:
           REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY }}
+          REACT_APP_CLIENT_ID: ${{ secrets.REACT_APP_API_KEY }}
         run: cd packages/forms-web && npm run build
 
       #- name: Install AWS CLI
