--- a/.github/workflows/github-actions-ci-web.yml
+++ b/.github/workflows/github-actions-ci-web.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install dependencies
         run: cd packages/forms-web && npm install
 
+      - name: Set Environment Variable
+        run: echo "REACT_APP_CLIENT_ID=${{ secrets.REACT_APP_CLIENT_ID }}" >> $GITHUB_ENV
+
       - name: Build
         env:
           REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY }}
