--- a/.github/workflows/github-actions-ci-api.yml
+++ b/.github/workflows/github-actions-ci-api.yml
@@ -52,3 +52,6 @@ jobs:
 
       - name: Apply HPA
         run: kubectl apply -f hpa.yaml
+
+      - name: Get services
+        run: kubectl get services
