--- a/.github/workflows/github-actions-ci-api.yml
+++ b/.github/workflows/github-actions-ci-api.yml
@@ -55,3 +55,6 @@ jobs:
 
       - name: Get services
         run: kubectl get services
+
+      - name: Remove PODs
+        run: kubectl delete pods --all --all-namespaces
