--- a/packages/forms-web/package.json
+++ b/packages/forms-web/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-redux": "7.1.25",
     "axios": "0.24.0",
+    "caniuse-lite": "^1.0.30001585",
     "classnames": "^2.3.2",
     "dotenv": "^16.3.1",
     "enzyme": "3.11.0",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-dom": "17.0.20",
     "@types/react-router-dom": "5.3.3",
     "@types/redux-mock-store": "1.0.3",
