--- a/packages/forms-api/package.json
+++ b/packages/forms-api/package.json
@@ -34,7 +34,9 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@prisma/client": "^5.10.1",
     "nodemon": "2.0.20",
+    "prisma": "^5.10.1",
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0"
   }
