--- a/.github/workflows/github-actions-ci-api.yml
+++ b/.github/workflows/github-actions-ci-api.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Apply env vars
         run: |
-          kubectl set env deployment/dynamic-forms GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" MONGOOSE_URL="${{ secrets.MONGOOSE_URL }}" SECRET_KEY="${{ secrets.SECRET_KEY }}" ENVIRONMENT=PROD
+          kubectl set env deployment/dynamic-forms GOOGLE_CLIENT_ID="${{ secrets.GOOGLE_CLIENT_ID }}" MONGOOSE_URL="${{ secrets.MONGOOSE_URL }}" SECRET_KEY="${{ secrets.SECRET_KEY }}" ENVIRONMENT=PROD DATABASE_URL="${{ secrets.DATABASE_URL }}"
 
       - name: Apply HPA
         run: kubectl apply -f hpa.yaml
