--- a/.github/workflows/github-actions-ci-api.yml
+++ b/.github/workflows/github-actions-ci-api.yml
@@ -34,6 +34,7 @@ jobs:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: dynamic-forms-rep
           IMAGE_TAG: 1.1
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
