--- a/packages/forms-api/package.json
+++ b/packages/forms-api/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prebuild": "prisma generate",
     "start": "ts-node src/main.ts",
     "serve": "nodemon src/main.ts",
     "build": "tsc",
